--- a/src/index.css
+++ b/src/index.css
@@ -25,14 +25,8 @@ h6 {
   padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
+.h1, .h2, .h3, .h4, .h5, h1, h2, h3, h4, h5 {
+  line-height: revert;
 }
 
 ul {
