--- a/src/pages/template/index.less
+++ b/src/pages/template/index.less
@@ -61,34 +61,14 @@
         font-size: 20px;
         color: #ff470d;
       }
+    }
 
-    }
-    .menu-body::-webkit-scrollbar {
-      width: 4px;
-      height: 0;
-    }
-    .menu-body::-webkit-scrollbar-thumb{
-      border-radius: 6px;
-      box-shadow: 8px 0 0 rgba(255,110,64,.15) inset;
-    }
-    .menu-body:hover{
-      overflow-y: scroll;
-    }
-    .menu-body{
-      overflow-y: hidden;
-      outline: none;
-      -webkit-box-flex: 1;
-      flex: 1;
+    .menu-account{
       display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      flex-direction: column;
-      position: relative;
       padding: 0 1.5rem 1.5rem;
-
       .dropdown{
-        width: calc(@left-menu-width - 50px);
-        margin-bottom: 20px;
+        //width: calc(@left-menu-width - 50px);
+        width: 100%;
         background-color: #fff;
         border-radius: 0.5rem;
         padding: 15px;
@@ -129,6 +109,30 @@
           }
         }
       }
+    }
+
+    .menu-body::-webkit-scrollbar {
+      width: 4px;
+      height: 0;
+    }
+    .menu-body::-webkit-scrollbar-thumb{
+      border-radius: 6px;
+      box-shadow: 8px 0 0 rgba(255,110,64,.15) inset;
+    }
+    .menu-body:hover{
+      overflow-y: scroll;
+    }
+    .menu-body{
+      overflow-y: hidden;
+      outline: none;
+      -webkit-box-flex: 1;
+      flex: 1;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      flex-direction: column;
+      position: relative;
+      padding: 0 1.5rem 1.5rem;
     }
   }
   .template-right{
@@ -262,7 +266,7 @@
         margin-bottom: 0;
         list-style: none;
         a{
-          color: #666;
+          //color: #666;
           display: block;
           padding: 0.5rem 1rem;
           text-decoration: none;
