--- a/src/pages/account/index.less
+++ b/src/pages/account/index.less
@@ -4,10 +4,10 @@
     content: "";
     display: block;
     position: absolute;
-    right: 0px;
-    left: 0px;
-    top: 0px;
-    bottom: 0px;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
     background: rgba(255, 255, 255, 0.4);
   }
   .profile-cover {
@@ -20,8 +20,7 @@
     background-position: 50%;
     position: relative;
     overflow: hidden;
-
-
+    margin-bottom: 1.5rem;
     .profile-container{
       display: flex;
       align-items: center;
@@ -54,6 +53,43 @@
           }
         }
       }
+    }
+  }
+  .basic-info{
+    transition: transform .3s,-webkit-transform .3s;
+    position: relative;
+    display: flex;
+    margin-bottom: 1.5rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.5rem;
+    -webkit-box-flex: 1;
+    padding: 1.5rem;
+  }
+  .card-title{
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+  }
+  .password-autograph{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    flex-direction: row;
+    .password,.autograph{
+      width: 49.5%;
+      background-color: #fff;
+      background-clip: border-box;
+      border: 1px solid rgba(0,0,0,.125);
+      border-radius: 0.5rem;
+      -webkit-box-flex: 1;
+      padding: 1.5rem;
     }
   }
 }
