--- a/src/pages/account/index.less
+++ b/src/pages/account/index.less
@@ -78,6 +78,8 @@
   .card-title{
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
+    border-left: 3px solid #ff470d;
+    padding-left: 1rem;
   }
   // 表单控件通用样式
   .input-control-line{
@@ -144,8 +146,10 @@
     align-content: center;
     align-items: center;
     flex-direction: row;
+    height: 19rem;
     .password,.autograph{
       width: 49.5%;
+      height: 100%;
       background-color: #fff;
       background-clip: border-box;
       border: 1px solid rgba(0,0,0,.125);
@@ -166,6 +170,11 @@
         .input-control-btn-save{
           margin-right: 1rem;
         }
+      }
+    }
+    .password{
+      .result-subtitle button{
+        color: #ff470d;
       }
     }
   }
