--- a/src/pages/account/index.less
+++ b/src/pages/account/index.less
@@ -78,7 +78,7 @@
   .card-title{
     font-size: 1.2rem;
     margin-bottom: 1.5rem;
-    border-left: 3px solid #ff470d;
+    border-left: 3px solid #ff6e40;
     padding-left: 1rem;
   }
   // 表单控件通用样式
@@ -112,7 +112,7 @@
         }
         .input-control-btn-edit{
           margin-left: 1rem;
-          color: #ff470d;
+          color: #ff6e40;
         }
       }
       .input-field-edit-ing{
@@ -133,7 +133,7 @@
           align-items: center;
           margin-left: 1rem;
           .input-control-btn-save{
-            color: #ff470d;
+            color: #ff6e40;
           }
         }
       }
@@ -146,7 +146,7 @@
     align-content: center;
     align-items: center;
     flex-direction: row;
-    height: 19rem;
+    height: 25rem;
     .password,.autograph{
       width: 49.5%;
       height: 100%;
@@ -163,7 +163,7 @@
       }
       .input-control-btn-edit{
         margin-left: 1rem;
-        color: #ff470d;
+        color: #ff6e40;
       }
       .input-control-btn{
         margin-top: 1rem;
@@ -173,8 +173,38 @@
       }
     }
     .password{
-      .result-subtitle button{
-        color: #ff470d;
+      .steps-field-label{
+        width: 7rem;
+        text-align: right;
+      }
+      .steps1{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        margin-top: 2rem;
+        input{
+          margin-left: 1rem;
+          width: 15rem;
+        }
+      }
+      .steps2{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        input{
+          margin-left: 1rem;
+          width: 15rem;
+        }
+        .steps2-line{
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          margin-top: 2rem;
+        }
+      }
+      .steps-footer{
+        margin-top: 2rem;
+        padding-left: 8rem;
       }
     }
   }
