--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ th {
 
 a {
     text-decoration: none;
-    color: #ff470d;
+    color: var(--primary-color);
 }
 
 html, body {
@@ -86,7 +86,7 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
-    background-color: #f5f4fe;
+    background-color: var(--primary-background-color);
 }
 
 #root {
@@ -95,36 +95,79 @@ html, body {
     font-family: 'Google Sans', Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
     font-size: .875rem;
     letter-spacing: .25px;
-    color: #3c4043;
+    color: var(--primary-font-color);
+    /*左侧菜单宽度*/
     --left-menu-width: 400px;
+    /*右侧区域高度*/
+    --right-template-height: 100vh;
+    /*左侧菜单头部高度*/
+    --left-menu-header-height: 90px;
+    /*左侧菜单头部项目高度*/
+    --left-menu-header-project-height: 60px;
+    /*左侧菜单头部项目宽度*/
+    --left-menu-header-project-width: 60px;
+    /*左侧菜单头部项目字体大小*/
+    --left-menu-header-project-font-size: 20px;
+    /*左侧菜单头像大小*/
+    --left-menu-avatar-height: 3rem;
+    --left-menu-avatar-width: 3rem;
+    /*右侧菜单头部高度*/
+    --right-template-header-height: 90px;
+    /*底部版权高度*/
+    --footer-height: 50px;
+    /*页面字体样式*/
+    --page-title-font-size: 25px;
+    --page-title-font-weight: 500;
+    /*左侧菜单数字颜色*/
+    --left-menu-number-size: 28px;
 }
 
 /*******************配置组件自定义颜色(入口css)******************/
-.light-theme {
-/*// 亮色主题颜色全局变量*/
---primary-color: #1890ff;
-    --primary-color50: rgba(24,144,255, 0.5);
-    --primary-color20: rgba(24,144,255, 0.2);
-    --main-background-color: #ffffff;
-    --text-color: rgba(0, 0, 0, 0.85);
-    --text-color65: rgba(0, 0, 0, 0.65);
-    --text-color45: rgba(0, 0, 0, 0.45);
-    --text-color25: rgba(0, 0, 0, 0.25);
-    --text-color10: rgba(0, 0, 0, 0.1);
-    --title-text-color: #000000;
-    --title-text-primary-color: #1890ff;
+/*默认主题色(活力)*/
+.default-theme,.vitality-theme{
+    /*主色调*/
+    --primary-color: #ff470d;
+    /*主色调（按钮被选中）*/
+    --primary-front-active-color:#f67753;
+    /*主背景色*/
+    --primary-background-color: #f5f4fe;
+    /*主字体色*/
+    --primary-font-color: #3c4043;
+    /*被选中的背景色*/
+    --primary-background--active-color: rgba(255,110,64,.15);
+    /*滚动条颜色*/
+    --scrollbar-thumb-box-shadow: 8px 0 0 var(--primary-background--active-color) inset;
+    /*第二字体颜色*/
+    --second-fontcolor: #212529;
+    /*左侧菜单数字颜色*/
+    --left-menu-number-font-color: #fff;
+    /*左侧菜单数字背景颜色*/
+    --left-menu-number-background-color: #05b171;
+    /*卡片边框样式*/
+    --card-border: 1px solid rgba(0,0,0,.125);
 }
-.dark-theme {
-/*暗色主题颜色全局变量*/
---primary-color: #67B9B8;
-    --primary-color50: rgba(103,185,184, 0.5);
-    --primary-color20: rgba(103,185,184, 0.2);
-    --main-background-color: #213853;
-    --text-color:rgba(255, 255, 255, 0.85);
-    --text-color65:rgba(255, 255, 255, 0.65);
-    --text-color45:rgba(255, 255, 255, 0.45);
-    --text-color25:rgba(255, 255, 255, 0.25);
-    --text-color10:rgba(255, 255, 255, 0.1);
-    --title-text-color: #ffffff;
-    --title-text-primary-color: #ffffff;
+
+/*按钮的样式重写*/
+.ant-btn-primary{
+    color: #fff !important;
+    background: var(--primary-color) !important;
+}
+.ant-btn-primary:hover {
+    color: #fff !important;
+    background: var(--primary-front-active-color) !important;
+}
+/*文本框样式的重写*/
+.ant-input-outlined:hover,.ant-input-outlined:focus,.ant-input-outlined:focus-within,.ant-picker-outlined:focus-within {
+    border-color: var(--primary-front-active-color) !important;
+    box-shadow: none !important;
+    background-color: #ffffff !important;
+}
+.ant-picker-dropdown .ant-picker-cell-in-view.ant-picker-cell-selected:not(.ant-picker-cell-disabled) .ant-picker-cell-inner {
+    color: #fff !important;
+    background: var(--primary-front-active-color) !important;
+}
+/*步骤条的样式重写*/
+.ant-steps .ant-steps-item-process .ant-steps-item-icon {
+    background-color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
 }
